force-app/main/default/objects/Account/fields/Converted_to_Intapp_Time__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Intapp_Time__c</fullName>
    <formula>IF(
  NOT(ISPICKVAL(Intapp_Time__c,&quot;Own it&quot;)),
  FALSE,
  IF(
    OR(
      ISPICKVAL(Intapp_Time_Core_Management__c,&quot;Own it&quot;),
      ISPICKVAL(Intapp_Time_Total_Management__c,&quot;Own it&quot;),
      ISPICKVAL(Intapp_Time_Capture__c,&quot;Own it&quot;),
      ISPICKVAL(Intapp_Time_Mobile__c,&quot;Own it&quot;),
      ISPICKVAL(Intapp_Time_Compliance_Module__c,&quot;Own it&quot;)
    ),
    TRUE,
    FALSE
  )
)</formula>
    <label>Converted to Intapp Time?</label>
    <type>Checkbox</type>
</CustomField>