force-app/main/default/objects/Account/fields/Cost_RecoveryPortfolio__c.field-meta.xml
<CustomField>
    <fullName>Cost_RecoveryPortfolio__c</fullName>
    <description>This is to designate the Cost Recovery application in use at the account. This replaced the old checkbox system.</description>
    <label>Cost Recovery</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billback</fullName>
            </value>
            <value>
                <fullName>Chrome River</fullName>
            </value>
            <value>
                <fullName>Copitrak</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Equitrac</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>nQueue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>