force-app/main/default/objects/Account/fields/Could_Be_Total__c.field-meta.xml
<CustomField>
    <fullName>Could_Be_Total__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Could Be Total</label>
    <type>Checkbox</type>
</CustomField>