force-app/main/default/objects/Account/fields/CRM__c.field-meta.xml
<CustomField>
    <fullName>CRM__c</fullName>
    <label>CRM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CRM - Cloud</fullName>
            </value>
            <value>
                <fullName>OnePlace CRM (Salesforce-Legacy)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>