force-app/main/default/objects/Account/fields/CSM_Health_Rating__c.field-meta.xml
<CustomField>
    <fullName>CSM_Health_Rating__c</fullName>
    <label>Account Health Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <color>#78C953</color>
                <label>Green</label>
            </value>
            <value>
                <fullName>Amber</fullName>
                <color>#F3D904</color>
                <label>Amber</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <label>Red</label>
            </value>
            <value>
                <fullName>Black</fullName>
                <color>#000000</color>
                <label>Black</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <color>#DDDDDD</color>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>