force-app/main/default/objects/Account/fields/Custom_Master_Term__c.field-meta.xml
<CustomField>
    <fullName>Custom_Master_Term__c</fullName>
    <inlineHelpText>This field is used by Contract Operations. This defines contract master term for all quotes on the account</inlineHelpText>
    <label>Custom Master Term</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>