force-app/main/default/objects/Account/fields/Custom_Pricing_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Custom_Pricing_Agreement__c</fullName>
    <description>This field is to help multiple teams keep track of when a customer has custom services rates or subscription rates.</description>
    <inlineHelpText>Custom pricing specific to this customer. Please specify where these terms reside i.e. OSA # and how long the special pricing is valid for.</inlineHelpText>
    <label>Custom Pricing Agreement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>