force-app/main/default/objects/Account/fields/Customer_Geographic_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Customer_Geographic_Restriction__c</fullName>
    <label>Customer Geographic Restriction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>UK ONLY</fullName>
            </value>
            <value>
                <fullName>UK USA ONLY</fullName>
            </value>
            <value>
                <fullName>UK USA UKRAINE ONLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>