force-app/main/default/objects/Account/fields/Data_Audit_and_Cleansing__c.field-meta.xml
<CustomField>
    <fullName>Data_Audit_and_Cleansing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Audit and Cleansing</label>
    <type>Checkbox</type>
</CustomField>