force-app/main/default/objects/Account/fields/Date_Last_used_as_reference__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_used_as_reference__c</fullName>
    <description>when were they last used as a reference?</description>
    <inlineHelpText>when were they last used as a reference?</inlineHelpText>
    <label>Date Last used as reference</label>
    <type>Date</type>
</CustomField>