force-app/main/default/objects/Account/fields/DC_Master_Agreement__c.field-meta.xml
<CustomField>
    <fullName>DC_Master_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://intapp.freshservice.com/helpdesk/tickets/98815</description>
    <label>DC Master Agreement</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Accounts (DC Master Agreement)</relationshipLabel>
    <relationshipName>Accounts8</relationshipName>
    <type>Lookup</type>
</CustomField>