force-app/main/default/objects/Account/fields/DC_MSA_Addendum__c.field-meta.xml
<CustomField>
    <fullName>DC_MSA_Addendum__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DC MSA Addendum</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Accounts (DC MSA Addendum)</relationshipLabel>
    <relationshipName>Accounts13</relationshipName>
    <type>Lookup</type>
</CustomField>