force-app/main/default/objects/Account/fields/DC_MSSA_is_a_placeholder__c.field-meta.xml
<CustomField>
    <fullName>DC_MSSA_is_a_placeholder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://intapp.freshservice.com/helpdesk/tickets/116207</description>
    <label>DC MSSA # is a placeholder?</label>
    <type>Checkbox</type>
</CustomField>