force-app/main/default/objects/Account/fields/DE_Version_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>DE_Version_Last_Modified__c</fullName>
    <label>DE Version Last Modified</label>
    <type>Date</type>
</CustomField>