force-app/main/default/objects/Account/fields/Dealcloud__c.field-meta.xml
<CustomField>
    <fullName>Dealcloud__c</fullName>
    <label>Dealcloud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DealCloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>