force-app/main/default/objects/Account/fields/Dedicated_Support_Engineer_OnePlace__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Support_Engineer_OnePlace__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dedicated Support Engineer(OnePlace)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accountsgni4</relationshipName>
    <type>Lookup</type>
</CustomField>