force-app/main/default/objects/Account/fields/Dedicated_Support_Engineer_Risk__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Support_Engineer_Risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is the dedicated support engineer for this account? This field is maintained by Support.</inlineHelpText>
    <label>Dedicated Support Engineer (Risk)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>