force-app/main/default/objects/Account/fields/DMSPortfolio__c.field-meta.xml
<CustomField>
    <fullName>DMSPortfolio__c</fullName>
    <description>This is to designate the DMS application in use at the account. This replaced the old checkbox system.</description>
    <inlineHelpText>What Document Management System does this account use?</inlineHelpText>
    <label>DMS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Affinity</fullName>
            </value>
            <value>
                <fullName>Axxia</fullName>
            </value>
            <value>
                <fullName>Bespoke</fullName>
            </value>
            <value>
                <fullName>Client Profiles</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>DM5</fullName>
            </value>
            <value>
                <fullName>DM6</fullName>
            </value>
            <value>
                <fullName>DOCS Open</fullName>
            </value>
            <value>
                <fullName>Documentum</fullName>
            </value>
            <value>
                <fullName>eDocs DM10</fullName>
            </value>
            <value>
                <fullName>Epona - DMSforLegal</fullName>
            </value>
            <value>
                <fullName>FileNet</fullName>
            </value>
            <value>
                <fullName>Fileshare</fullName>
            </value>
            <value>
                <fullName>Hosted iManage</fullName>
            </value>
            <value>
                <fullName>Hummingbird Unknown</fullName>
            </value>
            <value>
                <fullName>iManage</fullName>
            </value>
            <value>
                <fullName>Interwoven</fullName>
            </value>
            <value>
                <fullName>Interwoven Unknown</fullName>
            </value>
            <value>
                <fullName>LawMaster</fullName>
            </value>
            <value>
                <fullName>Lotus Domino</fullName>
            </value>
            <value>
                <fullName>NetDocuments</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Open Practice</fullName>
            </value>
            <value>
                <fullName>Open Text</fullName>
            </value>
            <value>
                <fullName>Open Text Livelink</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Peppermint Technology</fullName>
            </value>
            <value>
                <fullName>Perceptive Mentor</fullName>
            </value>
            <value>
                <fullName>ProLaw</fullName>
            </value>
            <value>
                <fullName>SharePoint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>