force-app/main/default/objects/Account/fields/Do_Not_Use_Logo__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Use_Logo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the firm has denied use of their logo.</description>
    <inlineHelpText>Check this box if the firm has denied use of their logo.</inlineHelpText>
    <label>Do Not Use Logo</label>
    <type>Checkbox</type>
</CustomField>