force-app/main/default/objects/Account/fields/Document_Assembly__c.field-meta.xml
<CustomField>
    <fullName>Document_Assembly__c</fullName>
    <inlineHelpText>What document assembly software does this account use?</inlineHelpText>
    <label>Document Assembly</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BI / Contract Express</fullName>
            </value>
            <value>
                <fullName>Exari</fullName>
            </value>
            <value>
                <fullName>HotDocs</fullName>
            </value>
            <value>
                <fullName>LegalWord</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>