force-app/main/default/objects/Account/fields/Does_the_firm_have_an_efficiency_initiat__c.field-meta.xml
<CustomField>
    <fullName>Does_the_firm_have_an_efficiency_initiat__c</fullName>
    <description>Does the firm have an efficiency initiative?</description>
    <inlineHelpText>Does the firm have an efficiency initiative?</inlineHelpText>
    <label>Does the firm have efficiency initiative</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>