force-app/main/default/objects/Account/fields/DPA_Status__c.field-meta.xml
<CustomField>
    <fullName>DPA_Status__c</fullName>
    <description>Requested on FreshDesk Ticket #21720 to replace existing &apos;DPA Signed&apos; and &apos;DPA Customized&apos; fields.</description>
    <inlineHelpText>“BLANK”: No action 
&quot;SENT&quot;: No further communication 
&quot;IN NEGOTIATION&quot;: Communications underway 
&quot;COMPLETE&quot;: Standard DPA has been signed 
&quot;CUSTOM&quot;: A customized DPA has been signed 
&quot;DECLINED&quot;: Refuse to sign (REMEMBER TO UPLOAD EVIDENCE)</inlineHelpText>
    <label>DPA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>In Negotiation</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
                <label>Complete v1804</label>
            </value>
            <value>
                <fullName>Complete v1809</fullName>
            </value>
            <value>
                <fullName>Complete v11</fullName>
            </value>
            <value>
                <fullName>Complete v12</fullName>
            </value>
            <value>
                <fullName>Complete v13</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>