force-app/main/default/objects/Account/fields/DTE_Legacy_Mobile__c.field-meta.xml
<CustomField>
    <fullName>DTE_Legacy_Mobile__c</fullName>
    <inlineHelpText>Does this customer own DTE Legacy Mobile?</inlineHelpText>
    <label>DTE Legacy Mobile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Suspect</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Own it</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>