force-app/main/default/objects/Account/fields/E_Mail_CollaborationPortfolio__c.field-meta.xml
<CustomField>
    <fullName>E_Mail_CollaborationPortfolio__c</fullName>
    <description>This is to designate the E-Mail/Collaboration application in use at the account. This replaced the old checkbox system.</description>
    <inlineHelpText>What email collaboration software does this account use?</inlineHelpText>
    <label>E-Mail/Collaboration</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BES</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Groupwise</fullName>
            </value>
            <value>
                <fullName>GroupWise 6.x</fullName>
            </value>
            <value>
                <fullName>GroupWise 7.x</fullName>
            </value>
            <value>
                <fullName>Lotus Notes</fullName>
            </value>
            <value>
                <fullName>Lotus Notes R5</fullName>
            </value>
            <value>
                <fullName>Lotus Notes R6</fullName>
            </value>
            <value>
                <fullName>Lotus Notes R7</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Outlook</fullName>
            </value>
            <value>
                <fullName>Peppermint Technology</fullName>
            </value>
            <value>
                <fullName>Right Fax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>