force-app/main/default/objects/Account/fields/eBilling_Software__c.field-meta.xml
<CustomField>
    <fullName>eBilling_Software__c</fullName>
    <description>What software does the account use for their eBilling?</description>
    <inlineHelpText>What software does the account use for eBilling?</inlineHelpText>
    <label>eBilling Software</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eBilling Hub</fullName>
            </value>
            <value>
                <fullName>BillBLAST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>