force-app/main/default/objects/Account/fields/Email_Format__c.field-meta.xml
<CustomField>
    <fullName>Email_Format__c</fullName>
    <inlineHelpText>The email format the contact emails typically follow</inlineHelpText>
    <label>Email Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F.Last</fullName>
            </value>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>First_Last</fullName>
            </value>
            <value>
                <fullName>First.Last</fullName>
            </value>
            <value>
                <fullName>FirstL</fullName>
            </value>
            <value>
                <fullName>FirstLast</fullName>
            </value>
            <value>
                <fullName>First-Last</fullName>
            </value>
            <value>
                <fullName>FL</fullName>
            </value>
            <value>
                <fullName>FLast</fullName>
            </value>
            <value>
                <fullName>Last</fullName>
            </value>
            <value>
                <fullName>Last.First</fullName>
            </value>
            <value>
                <fullName>LastF</fullName>
            </value>
            <value>
                <fullName>Non-standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>