force-app/main/default/objects/Account/fields/Engaged_with_Managing_Partner__c.field-meta.xml
<CustomField>
    <fullName>Engaged_with_Managing_Partner__c</fullName>
    <label>Engaged with Managing Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Met with</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>