force-app/main/default/objects/Account/fields/engagio_Date_Last_Activity_Logged__c.field-meta.xml
<CustomField>
    <fullName>engagio_Date_Last_Activity_Logged__c</fullName>
    <label>Date Last Activity Logged - Account</label>
    <type>Date</type>
</CustomField>